--- a/TrainingPractico1/app/src/main/AndroidManifest.xml
+++ b/TrainingPractico1/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name="com.mercadolibre.jvillarnovo.trainingpractico1.ResultActivity"
             android:label="@string/title_activity_result" >
         </activity>
+        <activity
+            android:name="com.mercadolibre.jvillarnovo.trainingpractico1.ItemDetailActivity"
+            android:label="@string/title_activity_item_detail" >
+        </activity>
     </application>
 
 </manifest>
